src/bindings.rs

extern "C" {
    #[doc = " \\brief An AV client receives frame data from an AV server"]
    #[doc = ""]
    #[doc = " \\details An AV client uses this function to receive frame data from AV server"]
    #[doc = ""]
    #[doc = " \\param nAVChannelID [in] The channel ID of the AV channel to be received"]
    #[doc = " \\param abFrameData [out] The frame data to be received"]
    #[doc = " \\param nFrameDataMaxSize [in] The max size of the frame data"]
    #[doc = " \\param abFrameInfo [out] The video frame information to be received"]
    #[doc = " \\param nFrameInfoMaxSize [in] The max size of the video frame information"]
    #[doc = " \\param pnFrameIdx [out] The index of current receiving video frame"]
    #[doc = ""]
    #[doc = " \\return The actual length of received result stored in abFrameData if successfully"]
    #[doc = " \\return Error code if return value < 0"]
    #[doc = "\t\t\t- #AV_ER_INVALID_ARG The AV channel ID is not valid or frame data is null"]
    #[doc = "\t\t\t- #AV_ER_SESSION_CLOSE_BY_REMOTE The remote site already closes"]
    #[doc = "\t\t\t\tthis IOTC session"]
    #[doc = "\t\t\t- #AV_ER_REMOTE_TIMEOUT_DISCONNECT The timeout expires because"]
    #[doc = "\t\t\t\tremote site has no response."]
    #[doc = "\t\t\t- #AV_ER_INVALID_SID The IOTC session of this AV channel is not valid"]
    #[doc = "\t\t\t- #AV_ER_DATA_NOREADY The data is not ready for receiving yet."]
    #[doc = "\t\t\t- #AV_ER_LOSED_THIS_FRAME The whole frame is lost during receiving"]
    #[doc = "\t\t\t- #AV_ER_BUFPARA_MAXSIZE_INSUFF The frame to be received exceeds"]
    #[doc = "\t\t\t\tthe size of abFrameData, i.e. nFrameDataMaxSize"]
    #[doc = "\t\t\t- #AV_ER_MEM_INSUFF Insufficient memory for allocation"]
    #[doc = "\t\t\t- #AV_ER_INCOMPLETE_FRAME Some parts of a frame are lost during receiving"]
    #[doc = "\t\t\t- #AV_ER_NO_PERMISSION the AV module does not support Lite UID"]
    #[doc = ""]
    #[doc = " \\see avRecvAudioData()"]
    #[doc = ""]
    pub fn avRecvFrameData(
        nAVChannelID: ::std::os::raw::c_int,
        abFrameData: *mut ::std::os::raw::c_char,
        nFrameDataMaxSize: ::std::os::raw::c_int,
        abFrameInfo: *mut ::std::os::raw::c_char,
        nFrameInfoMaxSize: ::std::os::raw::c_int,
        pnFrameIdx: *mut ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief A new version AV client receives frame data from an AV server"]
    #[doc = ""]
    #[doc = " \\details An AV client uses this function to receive frame data from AV server"]
    #[doc = ""]
    #[doc = " \\param nAVChannelID [in] The channel ID of the AV channel to be received"]
    #[doc = " \\param abFrameData [out] The frame data to be received"]
    #[doc = " \\param nFrameDataMaxSize [in] The max size of the frame data"]
    #[doc = " \\param pnActualFrameSize [in] The actual size of frame data to be received, maybe less than expected size"]
    #[doc = " \\param pnExpectedFrameSize [in] The size of frame data expect to be received that sent from av server"]
    #[doc = " \\param abFrameInfo [out] The video frame information to be received"]
    #[doc = " \\param nFrameInfoMaxSize [in] The max size of the video frame information"]
    #[doc = " \\param pnActualFrameInfoSize [in] The actual size of the video frame information to be received"]
    #[doc = " \\param pnFrameIdx [out] The index of current receiving video frame"]
    #[doc = ""]
    #[doc = " \\return The actual length of received result stored in abFrameData if successfully"]
    #[doc = " \\return Error code if return value < 0"]
    #[doc = "\t\t\t- #AV_ER_INVALID_ARG The AV channel ID is not valid or frame data is null"]
    #[doc = "\t\t\t- #AV_ER_SESSION_CLOSE_BY_REMOTE The remote site already closes"]
    #[doc = "\t\t\t\tthis IOTC session"]
    #[doc = "\t\t\t- #AV_ER_REMOTE_TIMEOUT_DISCONNECT The timeout expires because"]
    #[doc = "\t\t\t\tremote site has no response."]
    #[doc = "\t\t\t- #AV_ER_INVALID_SID The IOTC session of this AV channel is not valid"]
    #[doc = "\t\t\t- #AV_ER_DATA_NOREADY The data is not ready for receiving yet."]
    #[doc = "\t\t\t- #AV_ER_LOSED_THIS_FRAME The whole frame is lost during receiving"]
    #[doc = "\t\t\t- #AV_ER_BUFPARA_MAXSIZE_INSUFF The frame to be received exceeds"]
    #[doc = "\t\t\t\tthe size of abFrameData, i.e. nFrameDataMaxSize"]
    #[doc = "\t\t\t- #AV_ER_MEM_INSUFF Insufficient memory for allocation"]
    #[doc = "\t\t\t- #AV_ER_INCOMPLETE_FRAME Some parts of a frame are lost during receiving"]
    #[doc = "\t\t\t- #AV_ER_NO_PERMISSION the AV module does not support Lite UID"]
    #[doc = ""]
    #[doc = " \\see avRecvAudioData()"]
    #[doc = ""]
    pub fn avRecvFrameData2(
        nAVChannelID: ::std::os::raw::c_int,
        abFrameData: *mut ::std::os::raw::c_char,
        nFrameDataMaxSize: ::std::os::raw::c_int,
        pnActualFrameSize: *mut ::std::os::raw::c_int,
        pnExpectedFrameSize: *mut ::std::os::raw::c_int,
        abFrameInfo: *mut ::std::os::raw::c_char,
        nFrameInfoMaxSize: ::std::os::raw::c_int,
        pnActualFrameInfoSize: *mut ::std::os::raw::c_int,
        pnFrameIdx: *mut ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief An AV client receives audio data from an AV server"]
    #[doc = ""]
    #[doc = " \\details An AV client uses this function to receive audio data from AV server"]
    #[doc = ""]
    #[doc = " \\param nAVChannelID [in] The channel ID of the AV channel to be received"]
    #[doc = " \\param abAudioData [out] The audio data to be received"]
    #[doc = " \\param nAudioDataMaxSize [in] The max size of the audio data"]
    #[doc = " \\param abFrameInfo [out] The audio frame information to be received"]
    #[doc = " \\param nFrameInfoMaxSize [in] The max size of the audio frame information"]
    #[doc = " \\param pnFrameIdx [out] The index of current receiving audio frame"]
    #[doc = ""]
    #[doc = " \\return The actual length of received result stored in abAudioData if successfully"]
    #[doc = " \\return Error code if return value < 0"]
    #[doc = "\t\t\t- #AV_ER_INVALID_ARG The AV channel ID is not valid or frame data is null"]
    #[doc = "\t\t\t- #AV_ER_SESSION_CLOSE_BY_REMOTE The remote site already closes"]
    #[doc = "\t\t\t\tthis IOTC session"]
    #[doc = "\t\t\t- #AV_ER_REMOTE_TIMEOUT_DISCONNECT The timeout expires because"]
    #[doc = "\t\t\t\tremote site has no response."]
    #[doc = "\t\t\t- #AV_ER_INVALID_SID The IOTC session of this AV channel is not valid"]
    #[doc = "\t\t\t- #AV_ER_DATA_NOREADY The data is not ready for receiving yet."]
    #[doc = "\t\t\t- #AV_ER_LOSED_THIS_FRAME The whole frame is lost during receiving"]
    #[doc = "\t\t\t- #AV_ER_BUFPARA_MAXSIZE_INSUFF The data and frame info to be received"]
    #[doc = "\t\t\t\texceeds\tthe size of abAudioData and abFrameInfo, respectively."]
    #[doc = "\t\t\t- #AV_ER_NO_PERMISSION the AV module does not support Lite UID"]
    #[doc = ""]
    #[doc = " \\see avRecvFrameData()"]
    #[doc = ""]
    pub fn avRecvAudioData(
        nAVChannelID: ::std::os::raw::c_int,
        abAudioData: *mut ::std::os::raw::c_char,
        nAudioDataMaxSize: ::std::os::raw::c_int,
        abFrameInfo: *mut ::std::os::raw::c_char,
        nFrameInfoMaxSize: ::std::os::raw::c_int,
        pnFrameIdx: *mut ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Get the frame count of audio buffer remaining in the queue"]
    #[doc = ""]
    #[doc = " \\details An AV client uses this function to get the frame count of audio buffer"]
    #[doc = "\t\t\tthat is still remaining in the receiving queue, then determine"]
    #[doc = "\t\t\twhether it is a right time to invoke avRecvAudioData()."]
    #[doc = "\t\t\tKeeping audio buffer in audio queue instead of receiving immediately"]
    #[doc = "\t\t\tcan greatly improve the discontinuous audio issues. However,"]
    #[doc = "\t\t\tit is not good to receive audio in a very long time since audio"]
    #[doc = "\t\t\tbuffer will overflow and audio data will be lost."]
    #[doc = ""]
    #[doc = " \\param nAVChannelID [in] The channel ID of the AV channel to check audio buffer"]
    #[doc = ""]
    #[doc = " \\return The frame count of audio buffer"]
    pub fn avCheckAudioBuf(nAVChannelID: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Set the maximum video frame buffer used in AV client"]
    #[doc = ""]
    #[doc = " \\details AV client sets the maximum video frame buffer by this function."]
    #[doc = "\t\t\tThe size of video frame buffer will affect the streaming fluency."]
    #[doc = "\t\t\tThe default size of video frame buffer is 1MB."]
    #[doc = ""]
    #[doc = " \\param nMaxBufSize The maximum video frame buffer, in unit of kilo-byte"]
    #[doc = ""]
    pub fn avClientSetMaxBufSize(nMaxBufSize: ::std::os::raw::c_uint);
}
extern "C" {
    #[doc = " \\brief Clean the video and audio buffer"]
    #[doc = ""]
    #[doc = " \\details A client with multiple device connection application should call"]
    #[doc = "\t\t\tthis function to clean AV buffer while switch to another devices."]
    #[doc = ""]
    #[doc = " \\param nAVChannelID [in] The channel ID of the AV channel to clean buffer"]
    #[doc = ""]
    #[doc = " \\return Error code if return value < 0"]
    #[doc = "\t\t\t- #AV_ER_INVALID_ARG The AV channel ID is not valid or frame data is null"]
    pub fn avClientCleanBuf(nAVChannelID: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Clean the video buffer"]
    #[doc = ""]
    #[doc = " \\details A client with multiple device connection application should call"]
    #[doc = "\t\t\tthis function to clean video buffer while switch to another devices."]
    #[doc = ""]
    #[doc = " \\param nAVChannelID [in] The channel ID of the AV channel to clean buffer"]
    #[doc = ""]
    #[doc = " \\return Error code if return value < 0"]
    #[doc = "\t\t\t- #AV_ER_INVALID_ARG The AV channel ID is not valid or frame data is null"]
    pub fn avClientCleanVideoBuf(nAVChannelID: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Clean the aduio buffer"]
    #[doc = ""]
    #[doc = " \\details A client with multiple device connection application should call"]
    #[doc = "\t\t\tthis function to clean audio buffer while switch listen to speaker."]
    #[doc = ""]
    #[doc = " \\param nAVChannelID [in] The channel ID of the audio channel to clean buffer"]
    #[doc = ""]
    #[doc = " \\return Error code if return value < 0"]
    #[doc = "\t\t\t- #AV_ER_INVALID_ARG The AV channel ID is not valid or frame data is null"]
    pub fn avClientCleanAudioBuf(nAVChannelID: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
